# OOCTriTile

./: .gitignore  .gitmodules  README.md
.github/workflows/: macos.yml  release.yml  ubuntu.yml  windows.yml
data/: README.md
examples/: CMakeLists.txt  build.sh  test.sh
examples/01_Trimesh_Tiling/: CMakeLists.txt  main.cpp
include/: bsp.cpp  bsp.h  bsp_cell.cpp  bsp_cell.h  file_manager.cpp  file_manager.h  geometry_items.h  read_off.cpp  read_off.h  tmesh_tiling.cpp  tmesh_tiling.h  trimesh.cpp  trimesh.h  write_off.cpp  write_off.h
